# OCEV-Projeto

./: .gitattributes  .gitignore  Cargo.toml  Makefile  config.toml  pyproject.toml  rustfmt.toml
benchmarks/: Cargo.toml  bench.sh
benchmarks/benches/: problems_bench.rs
benchmarks/src/: lib.rs
dashboard/: pyproject.toml
dashboard/dashboard/: page.py  problems_repr_plotter.py  read_log_file.py
data/: EA.xlsx  EAcsv.csv
data/config/: algebraic-function-test.json  algebraic-function-test.pkl  algebraic-function.json  algebraic-function.pkl  base.json  base.pkl  nqueens-1024.json  nqueens-1024.pkl  nqueens-128.json  nqueens-128.pkl  nqueens-512.json  nqueens-512.pkl  nqueens-weighted-1024.json  nqueens-weighted-128.json  nqueens-weighted-16.json  nqueens-weighted-32.json  nqueens-weighted-64.json  nqueens-weighted.json  nqueens.json  nqueens.pkl  radio-test.json  radio-test.pkl  radio.json  radio.pkl  radio_punk.json  sat-3-uf100-01-2.json  sat-3-uf100-01-2.pkl  sat-3-uf100-01-test-roulette.json  sat-3-uf100-01-test-roulette.pkl  sat-3-uf100-01-test.json  sat-3-uf100-01-test.pkl  sat-3-uf100-01.json  sat-3-uf100-01.pkl  sat3.pkl
data/instances/algebraic-function/: algebraic-function.txt
data/instances/radio/: radio_1.txt
data/instances/sat-3/: uf100-01.cnf
data/misc/: Escalonamento Linear.xlsx
data/profiler/: callgrind.out  profile.html  profile.json  profile_no_numba.json
ga_cli/: Cargo.toml
ga_cli/src/: logger.rs  main.rs  utils.rs
genetic_algorithm/: Cargo.toml
genetic_algorithm/src/: lib.rs  selection.rs
genetic_framework/: Cargo.toml
genetic_framework/src/: lib.rs
individual_creation/: Cargo.toml
individual_creation/src/: crossover.rs  lib.rs
loader_config/: Cargo.toml
loader_config/src/: lib.rs
ocev_projeto/: __init__.py  cli.py  framework.py  ga.py  population_initialization.py  problem.py  problem_factory.py  sat3.py
ocev_projeto/misc/: ea_timeline.py
ocev_projeto/models/: config.py
ocev_projeto/util/: set_numpy_threads.py
population/: Cargo.toml
population/src/: crossover.rs  lib.rs
problem/: Cargo.toml
problem/src/: lib.rs
problem_factory/: Cargo.toml
problem_factory/src/: algebraic_function.rs  lib.rs  nqueens.rs  nqueens_weighted.rs  problem.rs  radio.rs  sat_3.rs
sat_3/: Cargo.toml
sat_3/src/: lib.rs  main.rs
tests/: test_framework.py  test_ga.py  test_population_initialization.py  test_problem.py  test_sat3.py  test_sat3_fitness.py
