[tool.poetry]
name = "ocev-projeto"
version = "0.1.0"
description = ""
authors = ["Otávio Almeida <otavioalmeida650@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
plotly = "^5.19.0"
polars = "^0.20.14"
xlsx2csv = "^0.8.2"
pandas = "^2.2.1"
pyarrow = "^15.0.1"
kaleido = ">=0.2.1, !=0.2.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 118
preview = true
output-format = "full"
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml", "*.ipynb"]
lint.select = [
  "E",      # pycodestyle
  "F",      # pyflakes
  "UP",     # pyupgrade
  "N",      # pep8-naming
  "C90",    # mccabe
  "I",      # isort
  "PERF",   # perflint
  "NPY",    # numpy
  "PD",     # pandas
  "PL",     # pylint
  "RUF",    # ruff
  "ERA",    # eradicate
  "LOG",    # log
  "FURB",   # refurb
  "FLY",    # fly
  "TRY",    # tryceratops 
  "TD",     # todo
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-s --cov=ocev_projeto --cov-report html:tests/htmlcov"

[tool.coverage.report]
exclude_lines = [
  "def main",
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:"
]

[tool.taskipy.tasks]
test = "pytest tests/"
lint = "ruff check . --fix"
ea = "python ocev_projeto/ea_timeline.py"
