[package]
name = "ga_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = {version = "0.7.5"}
anyhow = {version = "1.0.82"}
problem_factory = {path="../problem_factory"}
genetic_framework = {path="../genetic_framework"}
tracing = {version = "0.1.40"}
tracing-subscriber = {version = "0.3.18"}
tokio = {version = "1.37.0", features = ["full"]}
tracing-appender = {version = "0.2.3"}
log4rs = {version = "1.3.0"}
log = {version = "0.4.21"}
chrono = {version = "0.4.38"}
clap = {version = "4.5.4", features=["derive"]}
strum = {version = "0.26.2"}
strum_macros = {version = "0.26.2"}

[features]
sequential = []
