[package]
name = "genetic_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
population = {path = "../population"}
loader_config = {path="../loader_config"}
problem_factory = {path = "../problem_factory"}
rayon = { version = "1.10.0"}
rand = { version = "0.8.5"}
indicatif = {version = "0.17.8"}
rand-unique = {version = "0.2.2"}
tracing = {version = "0.1.40"}
log = {version = "0.4.21"}
anyhow = {version="1.0.82"}
random_choice = {version = "0.3.2"}

[features]
sequential = []