[package]
name = "genetic_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genetic_algorithm = {path = "../genetic_algorithm"}
problem = {path = "../problem"}
loader_config = {path = "../loader_config"}
individual_creation = {path = "../individual_creation"}
indicatif = {version = "0.17.8"}
log = {version = "0.4.21"}
serde = {version = "1.0.198"}
serde_json = {version = "1.0.116"}