[package]
name = "problem_factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
problem = {path = "../problem"}
loader_config = {path = "../loader_config"}
individual_creation = {path="../individual_creation"}
rayon = {version = "1.10.0"}